Prevent docs overflowing container

--- a/themes/sceditor/static/css/stylesheet.css
+++ b/themes/sceditor/static/css/stylesheet.css
@@ -306,6 +306,7 @@ html code {
 .Documentation__content {
 	flex: 1 1 0;
 	order: 1;
+	overflow: hidden;
 }
 .Documentation__sidebar {
 	margin-right: 1.5rem;
